# qlik-view-rs

./: Cargo.toml  LICENSE  README.md
resources/: dimensions.qvd
src/: args.rs  lib.rs  main.rs  qvd_parser.rs  qvd_structure.rs
