[package]
name = "vqvd"
version = "0.0.1"
edition = "2021"
readme = "README.md"
description = "A library for reading Qlik Sense .qvd file format from the cli, written in Rust."
license = "Apache-2.0"
repository = "https://github.com/Jaribrisingr/qlik-view-rs"
keywords = ["cli", "rust", "qlik", "sense", "qvd"]


[[bin]]
name = "vqvd"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
quick-xml = { version = "0.28.1", features = ["serialize"] }
bitvec = "0.19.4"
clap = { version = "4.1.14", features = ["derive"] }
polars = "0.27.2"
